@@ -1,3 +1,9 @@
+2007-02-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
+
+	* vm-display-X11/sqUnixX11.c (display_ioGLcreateRenderer):
+	Explicitly set border pixel.
+	(xError): Print error message, request opcode and serial number.
+
 2006-12-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* vm-sound-ALSA/sqUnixSoundALSA.c: Attempt to reduce output
